[tool.poetry]
name = "csvify"
version = "0.1.0"
description = ""
authors = ["Hussain Al Ajmi <htajmi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.5"
uvicorn = "^0.11.7"
pandas = "^1.0.5"
xlrd = "^1.2.0"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
